# icfp-2015

./: .gitignore  Commands.hs  Data.hs  IO.hs  Main.hs  Makefile  Random.hs  Solver.hs  Translate.hs  icfp2015.cabal
