name:                icfp2015
version:             0.1.0.0
synopsis:            Implementation according to the http://icfpcontest.org/ (Year 2015)

license:             MIT
license-file:        LICENSE
author:              Marcellus Siegburg
maintainer:          marcellus.siegburg@gmail.com

category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable play_icfp2015
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9, containers >=0.5 && <0.6, text >=1.2 && <1.3, aeson >=0.9 && <0.10, bytestring >=0.10 && <0.11
  default-language:    Haskell2010
